# assignments-chair-ds-os-tum

./: .gitignore  README.md
assignment_1/: CMakeLists.txt  main.cpp  mymalloc.cpp  mymalloc.h
assignment_2/: CMakeLists.txt
assignment_2/client/: CMakeLists.txt
assignment_2/client/include/: Client.hpp
assignment_2/client/src/: main.cpp
assignment_2/common/include/: Common.hpp  Protocol.hpp  RingBuffer.hpp
assignment_2/server/: CMakeLists.txt
assignment_2/server/include/: HashTable.hpp  Server.hpp
assignment_2/server/src/: main.cpp
